--- a/R/variants.Rmd
+++ b/R/variants.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Variants Analysis"
-subtitle: "211130_Q96K97del_A603fs dataset"
+subtitle: "211130_Q86K87del_A603fs dataset"
 author: "Lachlan Baer"
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output:
@@ -13,7 +13,7 @@ output:
     fig_height: 6
     fig_align: "center"
     code_folding: hide
-editor_options: 
+editor_options:
   chunk_output_type: console
 ---
 
@@ -22,13 +22,13 @@ knitr::opts_chunk$set(
   echo = TRUE,
   message = FALSE,
   warning = FALSE,
-  error = FALSE, 
+  error = FALSE,
   fig.align = "center"
 )
 knitr::opts_knit$set(root.dir = rprojroot::find_rstudio_root_file())
 ```
 
-# Setup 
+# Setup
 
 ```{r packages}
 suppressPackageStartupMessages({
@@ -52,6 +52,7 @@ suppressPackageStartupMessages({
   library(Gviz)
   library(zoo)
   library(msigdbr)
+  library(viridis)
 })
 ```
 
@@ -77,27 +78,40 @@ options(ucscChromosomeNames = FALSE)
 
 ## EnsDb
 
-```{r drChrs}
-drChrs <- seq(1:25)
+```{r ensParams}
+ens_species <- "Danio rerio"
+ens_release <- "101"
+ens_assembly <- "GRCz11"
 ```
 
-```{r ah}
+```{r ensDb}
 ah <- AnnotationHub() %>%
-  subset(species == "Danio rerio") %>%
+  subset(species == ens_species) %>%
   subset(rdataclass == "EnsDb")
-ensDb <- ah[["AH83189"]] ## Ens101
-genes <- genes(ensDb, filter = SeqNameFilter(drChrs))
+ahId <- ah$ah_id[str_detect(ah$title, ens_release)]
+ensDb <- ah[[ahId]]
+```
+
+```{r chrInfo}
+chrInfo <- getChromInfoFromEnsembl(ens_assembly, release = ens_release) %>%
+  dplyr::filter(coord_system == "chromosome")
+primary_chrs <- chrInfo$name
+```
+
+```{r genes}
+genes <- genes(ensDb, filter = SeqNameFilter(primary_chrs))
 mcols(genes) <- mcols(genes)[
   c("gene_id", "gene_name", "gene_biotype", "entrezid")
 ]
-exons <- exonsBy(ensDb, by = "gene", filter = SeqNameFilter(drChrs))
 ```
 
-An `EnsDb` object for Ensembl release 101 was accessed and gene and exon annotation information was extracted.
+```{r exons}
+exons <- exonsBy(ensDb, by = "gene", filter = SeqNameFilter(primary_chrs))
+```
 
 ## Metadata
 
-```{r meta}
+```{r metadata}
 metadata <- read_csv(here("files/samples.csv")) %>%
   ## We need some sample aliases that follow R naming conventions
   mutate(
@@ -116,11 +130,10 @@ genoCols <- metadata$genotype %>%
   length() %>%
   brewer.pal("Set1") %>%
   setNames(levels(metadata$genotype))
-compCols <- genoCols[2:3]
 ```
 
-```{r samples_byGeno}
-samples_byGeno <- metadata %>%
+```{r samples_byGroup}
+samples_byGroup <- metadata %>%
   split(f = .$genotype) %>%
   sapply(function(x){
     pull(x, sample)
@@ -130,7 +143,12 @@ samples_byGeno <- metadata %>%
 # DE data
 
 ```{r deData}
-topDE <- readRDS(here("files/topTables.Rds"))
+topDE <- readRDS(here("files/topTables.Rds")) %>%
+  sapply(function(x){
+    dplyr::filter(x, chromosome %in% primary_chrs) %>%
+      droplevels()
+  }, simplify = FALSE) %>%
+  set_names(c("EOfADvsWT", "MPSvsWT"))
 ```
 
 ```{r deGenes}
@@ -179,28 +197,32 @@ allele_file <- file.path(here(), "files", "allele_stats.Rds")
 ```{r allele_stats}
 ## Takes 15-20 mins to run so .Rds saved for convenience
 if (!file.exists(allele_file)) {
-  allele_stats <- lapply(samples_byGeno, function(samples){
+  gr_tbl <- as_tibble(gr)
+  allele_counts <- lapply(samples_byGroup, function(samples){
     apply(gt[,samples], 1, function(genos){
       alleles <- genos %>%
         as.character() %>%
         str_split("/") %>%
         unlist()
-      n_called <- sum(alleles != ".")
-      n_nocall <- sum(alleles == ".")
-      n_0 <- sum(alleles == "0")
-      n_1 <- sum(alleles == "1")
-      n_2 <- sum(alleles == "2")
-      n_3 <- sum(alleles == "3")
       tibble(
-        n_called = n_called,
-        n_nocall = n_nocall,
-        n_0 = n_0,
-        n_1 = n_1,
-        n_2 = n_2,
-        n_3 = n_3,
+        n_called = sum(alleles != "."),
+        n_nocall = sum(alleles == "."),
+        n_0 = sum(alleles == "0"),
+        n_1 = sum(alleles == "1"),
+        n_2 = sum(alleles == "2"),
+        n_3 = sum(alleles == "3")
       )
     }) %>%
       bind_rows()
+  })
+  allele_stats <- lapply(allele_counts, function(counts){
+    cbind(gr_tbl, counts) %>%
+      mutate(
+        prop_ref = ifelse(n_called > n_nocall, n_0 / n_called, NA),
+        prop_called = n_called / (n_called + n_nocall)
+      ) %>%
+      nest(allele_counts = c(n_called, n_nocall, n_0, n_1, n_2, n_3)) %>%
+      GRanges()
   })
   saveRDS(object = allele_stats, file = allele_file)
 } else {
@@ -208,43 +230,89 @@ if (!file.exists(allele_file)) {
 }
 ```
 
-```{r allele_props}
-allele_props <- lapply(allele_stats, function(x){
-  x %>%
-    mutate(
-      prop_ref = ifelse(n_called > n_nocall, n_0 / n_called, NA),
-      prop_called = n_called / (n_called + n_nocall)
-    )
-})
-```
-
-```{r alleleDiss}
-diss_win <- 51
-alleleDiss <- lapply(
+```{r allele_diss}
+diss_winSize <- 21
+allele_diss <- lapply(
   list(
-    allele_props[c("EOfAD-like", "WT")],
-    allele_props[c("MPS-IIIB", "WT")]
+    allele_stats[c("EOfAD-like", "WT")],
+    allele_stats[c("MPS-IIIB", "WT")]
   ),
   function(props){
-    diss <- gr
-    diss$comp <- abs(props[[1]]$prop_ref - props[[2]]$prop_ref)
-    diss$qual_ave <- (props[[1]]$prop_called + props[[2]]$prop_called) / 2
-    diss <- as_tibble(diss) %>%
-      dplyr::filter(!is.na(comp)) %>%
+    gr %>%
+      as_tibble() %>%
+      mutate(
+        diss = abs(props[[1]]$prop_ref - props[[2]]$prop_ref),
+        qual_ave = (props[[1]]$prop_called + props[[2]]$prop_called) / 2
+      ) %>%
+      dplyr::filter(!is.na(diss)) %>%
       split(f = .$seqnames) %>%
       lapply(function(chr){
         dplyr::mutate(
           chr,
-          comp_rollmean = rollmean(comp, k = diss_win, fill = NA),
-          qual_rollmean = rollmean(qual_ave, k = diss_win, fill = NA),
+          diss_rollmean = rollmean(diss, k = diss_winSize, fill = NA),
+          qual_rollmean = rollmean(qual_ave, k = diss_winSize, fill = NA),
+          win_start = lag(start, n = (diss_winSize - 1) / 2),
+          win_end = lead(start, n = (diss_winSize - 1) / 2),
+          win_size = win_end - win_start
         ) %>%
-          dplyr::select(-c(comp, qual_ave))
+          dplyr::select(-c(diss, qual_ave))
       }) %>%
       bind_rows() %>%
       GRanges()
   }
 ) %>%
-  set_names(c("EOfAD-like", "MPS-IIIB"))
+  set_names(c("EOfADvsWT", "MPSvsWT"))
+```
+
+#### Elastic window ranges
+
+```{r plot_snv_winSize}
+lapply(seq_along(allele_diss), function(ind){
+  allele_diss[[ind]] %>%
+    as_tibble() %>%
+    dplyr::filter(!is.na(win_size)) %>%
+    mutate(
+      comparison = factor(names(allele_diss[ind]), levels = names(allele_diss[1:4]))
+    )
+}) %>%
+  bind_rows() %>%
+  ggplot(aes(win_size)) +
+  geom_histogram(
+    bins = 100,
+    colour = "black",
+    fill = "grey70"
+  ) +
+  scale_x_log10() +
+  facet_wrap(~comparison, ncol = 2) +
+  labs(
+    title = paste0(
+      "Distribution of elastic window sizes generated from ",
+      diss_winSize,
+      " SNVs"
+    ),
+    x = "Window size (bp)",
+    y = "Count"
+  )
+```
+
+```{r diss_winRanges}
+diss_winRanges <- lapply(allele_diss, function(x){
+  x %>%
+  as_tibble() %>%
+  dplyr::filter(!is.na(win_size)) %>%
+  dplyr::select(
+    seqnames, start = win_start, end = win_end, width = win_size, strand,
+    diss_rollmean, qual_rollmean
+  ) %>%
+  GRanges()
+})
+```
+
+```{r save_diss_winRanges}
+diss_winRanges_path <- file.path(here(), "files", "diss_winRanges.Rds")
+if (!file.exists(diss_winRanges_path)) {
+  saveRDS(diss_winRanges, diss_winRanges_path)
+}
 ```
 
 ### logFC
@@ -255,15 +323,18 @@ lfc <- lapply(topDE, function(x){
   x %>%
     dplyr::select(
       # Don't include strand because allelic differences between groups is consistent between strands
-      gene_id, gene_name, logFC, seqnames = chromosome, start, end, width  
+      gene_id, gene_name, logFC, seqnames = chromosome, start, end, width
     ) %>%
-    dplyr::filter(seqnames %in% drChrs) %>%
+    dplyr::filter(seqnames %in% primary_chrs) %>%
     mutate(abs.logFC = abs(logFC)) %>%
     split(f = .$seqnames) %>%
     lapply(function(chr){
       mutate(
         chr,
-        lfc_rollmean = rollmean(abs.logFC, k = lfc_win, fill = NA)
+        lfc_rollmean = rollmean(abs.logFC, k = lfc_win, fill = NA),
+        win_start = lag(start, n = (lfc_win - 1) / 2),
+        win_end = lead(end, n = (lfc_win - 1) / 2),
+        win_size = abs(win_end - win_start)
       )
     }) %>%
     bind_rows() %>%
@@ -271,153 +342,182 @@ lfc <- lapply(topDE, function(x){
 })
 ```
 
-### Gene sets
+#### Elastic window ranges
 
-Multiple gene set databases were accessed with the `msigdbr` package.
-
-```{r}
-entrezGenes <- genes %>%
-  as.data.frame() %>%
-  dplyr::filter(!is.na(entrezid)) %>%
-  mutate(entrezid = unAsIs(entrezid)) %>%
-  unnest(entrezid) %>%
-  dplyr::rename(entrez_gene = entrezid)
+```{r plot_lfc_winSize}
+lapply(seq_along(lfc), function(ind){
+  lfc[[ind]] %>%
+    as_tibble() %>%
+    dplyr::filter(!is.na(win_size)) %>%
+    mutate(
+      comparison = factor(names(lfc[ind]), levels = names(lfc[1:4]))
+    )
+}) %>%
+  bind_rows() %>%
+  ggplot(aes(win_size)) +
+  geom_histogram(
+    bins = 100,
+    colour = "black",
+    fill = "grey70"
+  ) +
+  scale_x_log10() +
+  facet_wrap(~comparison, ncol = 2) +
+  labs(
+    title = paste0(
+      "Distribution of elastic window sizes generated from ",
+      diss_winSize,
+      " genes"
+    ),
+    x = "Window size (bp)",
+    y = "Count"
+  )
 ```
-
-```{r}
-hm <- msigdbr("Danio rerio", category = "H") %>% 
-  left_join(entrezGenes) %>%
-  dplyr::filter(!is.na(gene_id)) %>%
-  distinct(gs_name, gene_id, .keep_all = TRUE)
-hmByGene <- hm %>%
-  split(f = .$gene_id) %>%
-  lapply(extract2, "gs_name")
-hmByID <- hm %>%
-  split(f = .$gs_name) %>%
-  lapply(extract2, "gene_id")
-```
-
-- The Hallmark gene sets consists of `r length(hmByID)` gene sets ranging from sizes of `r min(sapply(hmByID, length))` to `r max(sapply(hmByID, length))` genes.
-
-```{r}
-kg <- msigdbr("Danio rerio", category = "C2", subcategory = "CP:KEGG") %>%
-  left_join(entrezGenes) %>%
-  dplyr::filter(!is.na(gene_id)) %>%
-  distinct(gs_name, gene_id, .keep_all = TRUE)
-kgByGene <- kg %>%
-  split(f = .$gene_id) %>%
-  lapply(extract2, "gs_name")
-kgByID <- kg %>%
-  split(f = .$gs_name) %>%
-  lapply(extract2, "gene_id")
-```
-
-- The KEGG gene sets consists of `r length(kgByID)` gene sets ranging from sizes of `r min(sapply(kgByID, length))` to `r max(sapply(kgByID, length))` genes.
 
 ### Visualisation
 
-```{r plot_alleleDiss}
-plot_alleleDiss <- function(
-  chr, genes,
-  diss, diss_win, diss_type, diss_trans = 1,
-  lfc, lfc_win, lfc_type, lfc_trans = 1,
+```{r plot_allele_diss}
+plot_allele_diss <- function(
+  chr, genes = GRanges(), mutation = GRanges(),
+  diss, diss_type = "l", diss_trans = 1, highlight_genes = TRUE,
+  lfc = NULL, lfc_type = "heatmap", lfc_trans = 1/3,
   title
 ){
-  axis_track <- GenomeAxisTrack(add53=TRUE)
-  gene_track <- genes %>%
-    plyranges::filter(seqnames == chr) %>%
-    plyranges::mutate(symbol = gene_name) %>%
-    GeneRegionTrack(
-      name = "Genes",
+  tracks <- list()
+
+  if (length(mutation)) {
+    mutation <- mutation %>%
+      plyranges::filter(seqnames == chr) %>%
+      plyranges::mutate(symbol = gene_name)
+    mutant_track <- GeneRegionTrack(
+      range = mutation,
+      transcriptAnnotation = "symbol",
+      col = "white",
+      fill = "white",
+      showTranscriptId = TRUE,
+      fontcolor.group = "red",
+      cex.group = 0.6,
+      size = 0.3
+    )
+    tracks <- append(tracks, mutant_track)
+  }
+
+  axis_track <- GenomeAxisTrack(
+    add53 = TRUE,
+    add35 = TRUE,
+    name = paste0("Chr", chr),
+    showTitle = TRUE
+  )
+  if (length(mutation)) {
+    axis_track <- HighlightTrack(
+      trackList = list(axis_track),
+      range = mutation
+    )
+  }
+  tracks <- append(tracks, axis_track)
+
+  if (length(genes)) {
+    genes <- genes %>%
+      plyranges::filter(seqnames == chr) %>%
+      plyranges::mutate(symbol = gene_name)
+    gene_track <- GeneRegionTrack(
+      range = genes,
+      name = "DE",
       transcriptAnnotation = "symbol",
       showTranscriptId = TRUE,
       fontcolor.group = 1,
       cex.group = 0.5,
-      rotation.group = 0,
-      size = 0.5
+      size = 0.3
     )
-  diss_track <- diss[,"comp_rollmean"] %>%
+    tracks <- append(tracks, gene_track)
+  }
+
+  diss_track <- diss[,"diss_rollmean"] %>%
     plyranges::filter(seqnames == chr) %>%
-    plyranges::mutate(comp_rollmean = comp_rollmean^(diss_trans)) %>%
     DataTrack(
       type = diss_type,
-      name = "Allelic dissimilarity",
-      window = -1,
-      windowSize = 1
-    )
-  lfc_track <- lfc[,"lfc_rollmean"] %>%
-    plyranges::filter(seqnames == chr) %>%
-    plyranges::mutate(lfc_rollmean = lfc_rollmean^(diss_trans)) %>%
-    DataTrack(
-      type = lfc_type,
-      name = "Absolute logFC",
+      name = "Between-group genetic dissimilarity",
       window = -1,
       windowSize = 1,
-      showAxis = FALSE
+      col = "grey30",
+      col.axis = "black",
+      yTicksAt = seq(0, 1, 0.2),
+      ylim = c(0, 1),
+      transformation = function(x){x^(diss_trans)}
     )
+  if (highlight_genes) {
+    if (all(length(genes) & length(mutation))) {
+      ranges <- c(genes, mutation)
+    } else if (length(genes)) {
+      ranges <- genes
+    } else if (length(mutation)) {
+      ranges <- mutation
+    }
+    diss_track <- HighlightTrack(
+      trackList = list(diss_track),
+      range = c(genes, mutation),
+      col = c(rep("#ffd1d1", length(genes)), rep("red", length(mutation))),
+      fill = c(rep("#ffd1d1", length(genes)), rep("red", length(mutation)))
+    )
+  }
+  tracks <- append(tracks, diss_track)
+
+  if (length(lfc)) {
+    lfc_track <- lfc[,"lfc_rollmean"] %>%
+      plyranges::filter(seqnames == chr) %>%
+      DataTrack(
+        type = lfc_type,
+        name = paste0("abs.logFC^(1/3)"),
+        size = 1.5,
+        window = -1,
+        windowSize = 1,
+        col.axis = "black",
+        showColorBar = TRUE,
+        gradient = viridis(100, option = "D"),
+        transformation = function(x){x^(lfc_trans)}
+      )
+    tracks <- append(tracks, lfc_track)
+  }
+
   plotTracks(
-    list(axis_track, gene_track, diss_track, lfc_track),
+    trackList = tracks,
     main = title,
     cex.main = 1,
-    background.panel = "#FFFEDB",
-    background.title = "#814A00"
+    col.title = "black",
+    background.title = "white"
   )
 }
 ```
 
 ```{r plot1}
 chr <- "17"
-plot_alleleDiss(
-  chr = chr, genes = genes[deGenes[[1]]$gene_id],
-  diss = alleleDiss[[1]], diss_win = diss_win, diss_type = "l", diss_trans = 1/3,
-  lfc = lfc[[1]], lfc_win = lfc_win, lfc_type = "heatmap", lfc_trans = 1/3,
+ind <- 1
+plot_allele_diss(
+  chr = chr,
+  genes = genes[deGenes[[ind]]$gene_id],
+  mutation = genes[genes$gene_name == "psen1"],
+  diss = allele_diss[[ind]], diss_type = "l", diss_trans = 1,
+  lfc = lfc[[ind]], lfc_type = "heatmap", lfc_trans = 1/3,
   title = paste0(
-    "EOfAD-like vs WT",
-    " - chr ", chr,
-    " - dissimilarity window of ", diss_win, " SNVs",
-    " - logFC window of ", lfc_win, " genes"
-    )
+    names(allele_diss[ind]),
+    " - dissimilarity win of ", diss_winSize, " SNVs",
+    " - logFC win of ", lfc_win, " genes"
+  )
 )
 ```
 
 ```{r plot2}
 chr <- "24"
-plot_alleleDiss(
-  chr = chr, genes = genes[deGenes[[2]]$gene_id],
-  diss = alleleDiss[[2]], diss_win = diss_win, diss_type = "l", diss_trans = 1/3,
-  lfc = lfc[[2]], lfc_win = lfc_win, lfc_type = "heatmap", lfc_trans = 1/3,
+ind <- 2
+plot_allele_diss(
+  chr = chr,
+  genes = genes[deGenes[[ind]]$gene_id],
+  mutation = genes[genes$gene_name == "naglu"],
+  diss = allele_diss[[ind]], diss_type = "l", diss_trans = 1,
+  lfc = lfc[[ind]], lfc_type = "heatmap", lfc_trans = 1/3,
   title = paste0(
-    "MPS-IIIB vs WT",
-    " - chr ", chr,
-    " - dissimilarity window of ", diss_win, " SNVs",
-    " - logFC window of ", lfc_win, " genes"
-    )
+    names(allele_diss[ind]),
+    " - dissimilarity win of ", diss_winSize, " SNVs",
+    " - logFC win of ", lfc_win, " genes"
+  )
 )
 ```
-
-```{r plot2}
-chr <- "24"
-plot_alleleDiss(
-  chr = chr, genes = genes[kgByID$KEGG_GLYCOSAMINOGLYCAN_BIOSYNTHESIS_HEPARAN_SULFATE],
-  diss = alleleDiss[[2]], diss_win = diss_win, diss_type = "l", diss_trans = 1/3,
-  lfc = lfc[[2]], lfc_win = lfc_win, lfc_type = "heatmap", lfc_trans = 1/3,
-  title = paste0(
-    "MPS-IIIB vs WT",
-    " - chr ", chr,
-    " - dissimilarity window of ", diss_win, " SNVs",
-    " - logFC window of ", lfc_win, " genes"
-    )
-)
-```
-
-Circos plot
-
-Look at regulatory TFT datasets
-
-Try quasi likelihood for DE testing
-
-Give a summary of window sizes
-
-Look at the clustered DE genes near naglu
-- exclude naglu and see whether 
-- Plot all the genes belonging to the gene set on variation plot
